# Hush

./: CMakeLists.txt  New_audio_metrics.json  README.md  app.py  bashrc  docker-compose.yml  enhanced_audio_metrics.json  perfect_audio_metrics.json  readme.md  test_voice  test_voice_metrics.json
src/: main.cpp
static/: index.html
static/css/: style.css
static/js/: scripts.js
templates/: index.html
